--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -31,9 +31,6 @@ set-option -g status-keys "emacs"
 # Limit history to 20_000
 set-option -g history-limit 10000
 
-# automatically renumber tmux windows
-set-option -g renumber-windows on
-
 # Rather than constraining window size to the maximum size of any client
 # connected to the *session*, constrain window size to the maximum size of any
 # client connected to *that window*. Much more reasonable.
@@ -42,15 +39,12 @@ setw -g aggressive-resize on
 # make delay shorter
 set-option -sg escape-time 0
 
-# make window/pane index start with 1
-set-option -g base-index 1
-setw -g pane-base-index 1
-
 # synchronize all panes in a window
 bind y setw synchronize-panes
 
 # Allows to navigate through panes without pressing the control key
 # with awareness of Vim splits.
+# Moverse por paneles con "CapsLock + A + [h, j, k, l]"
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
     | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
 bind-key -n C-h if-shell "$is_vim" "send-keys C-h"  "select-pane -L"
@@ -74,6 +68,7 @@ set-option -g status-fg '#aaaaaa' # Set foreground status bar color
 
 # Window numbering configuration
 set-option -g base-index 1 # Start numbering at 1
+setw -g pane-base-index 1
 set-option -g renumber-windows on # Renumber windows on the fly
 
 # Move pane to new window
